Add C++ dependencies and configuration files (#47)

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM ghcr.io/ubcsailbot/sailbot_workspace/dev:infra_updates
+FROM ghcr.io/ubcsailbot/sailbot_workspace/dev:cppworkspace
 
 ## Uncomment this section to install the packages used in the ROS 2 tutorials
 # ENV DEBIAN_FRONTEND=noninteractive
