Update dev container accordingly

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,18 +1,18 @@
-FROM ghcr.io/ubcsailbot/sailbot_workspace/dev:cppworkspace
+FROM ghcr.io/ubcsailbot/sailbot_workspace/dev:ros_humble-ompl_d8375d8-amd64
 
-## Uncomment this section to install the packages used in the ROS 2 tutorials
+# # Uncomment this section to install the packages used in the ROS 2 tutorials
 # ENV DEBIAN_FRONTEND=noninteractive
 # RUN apt-get update \
 #  && apt-get -y install --no-install-recommends \
 #  # Your package list here
-#  ros-eloquent-turtlesim \
+#  ros-humble-turtlesim \
 #  # Clean up
 #  && apt-get autoremove -y \
 #  && apt-get clean -y \
 #  && rm -rf /var/lib/apt/lists/*
 # ENV DEBIAN_FRONTEND=
 
-## Uncomment this section to install additional packages
+# # Uncomment this section to install additional packages
 # ENV DEBIAN_FRONTEND=noninteractive
 # RUN apt-get update \
 #  && apt-get -y install --no-install-recommends \
