Markdown linting CI: check all files in regression, exclude src for normal

--- a/.github/workflows/readme-lint.yaml
+++ b/.github/workflows/readme-lint.yaml
@@ -18,7 +18,8 @@ jobs:
       uses: nosborn/github-action-markdown-cli@v3.2.0
       with:
         config_file: '.markdownlint.json'
-        files: 'README.md'
+        files: .
+        ignore_files: src/*
 
   # https://github.com/gaurav-nelson/github-action-markdown-link-check
   markdown-link-check:
@@ -31,4 +32,5 @@ jobs:
       uses: gaurav-nelson/github-action-markdown-link-check@v1
       with:
         config-file: '.markdown-link-check.json'
+        folder-path: '.devcontainer, .github, .vscode'
         file-path: './README.md'
