--- a/.github/workflows/regression-tests.yaml
+++ b/.github/workflows/regression-tests.yaml
@@ -10,11 +10,10 @@ jobs:
   ros_test:
     runs-on: ubuntu-latest
     steps:
-      - 
-        name: Checkout code
+      - name: Checkout code
         uses: actions/checkout@v3
-      -
-        name: Test
+
+      - name: Test
         uses: ./.github/actions/test/
 
   ros_lint:
@@ -25,11 +24,10 @@ jobs:
       matrix:
           linter: [clang-tidy, lint_cmake, xmllint, flake8, pep257]
     steps:
-      - 
-        name: Checkout code
+      - name: Checkout code
         uses: actions/checkout@v3
-      -
-        name: Run linter
+
+      - name: Run linter
         uses: ./.github/actions/lint/
         env: 
           LINTER: ${{ matrix.linter }}
@@ -44,8 +42,9 @@ jobs:
     - name: Run linter
       uses: nosborn/github-action-markdown-cli@v3.2.0
       with:
-        config_file: '.markdownlint.json'
+        config_file: .markdownlint.json
         files: .
+        dot: true
 
   # https://github.com/gaurav-nelson/github-action-markdown-link-check
   markdown-link-check:
@@ -57,5 +56,5 @@ jobs:
     - name: Run linter
       uses: gaurav-nelson/github-action-markdown-link-check@v1
       with:
-        config-file: '.markdown-link-check.json'
+        config-file: .markdown-link-check.json
         folder-path: .
