Update Scripts to Migrate CI to Subteam Repos (#60)
* Remove certain CI functions from sailbot_workspace

* Lint markdown as before and everything weekly

* Markdown linting CI: check all files in regression, exclude src for normal

* Add back README, linking to docs site for setup instructions

* Match CI configuration of network_systems

Co-authored-by: Patrick Creighton <pcreighton429@gmail.com>

--- a/.github/workflows/regression-tests.yaml
+++ b/.github/workflows/regression-tests.yaml
@@ -1,14 +1,22 @@
-name: Lint
+name: Regression Tests
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
+  schedule:
+    # Every Friday at 1:00am UTC
+    - cron: '0 1 * * 5'
   workflow_dispatch:
 
 jobs:
-  ros-lint:
+  ros_test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Test
+        uses: ./.github/actions/test/
+
+  ros_lint:
     name: ament_${{ matrix.linter }}
     runs-on: ubuntu-latest
     strategy:
@@ -16,11 +24,10 @@ jobs:
       matrix:
           linter: [clang-tidy, lint_cmake, xmllint, flake8, pep257]
     steps:
-      - 
-        name: Checkout code
+      - name: Checkout code
         uses: actions/checkout@v3
-      -
-        name: Run linter
+
+      - name: Run linter
         uses: ./.github/actions/lint/
         env: 
           LINTER: ${{ matrix.linter }}
@@ -35,8 +42,9 @@ jobs:
     - name: Run linter
       uses: nosborn/github-action-markdown-cli@v3.2.0
       with:
-        files: '.devcontainer/'
-        config_file: '.markdownlint.json'
+        config_file: .markdownlint.json
+        files: .
+        dot: true
 
   # https://github.com/gaurav-nelson/github-action-markdown-link-check
   markdown-link-check:
@@ -48,5 +56,5 @@ jobs:
     - name: Run linter
       uses: gaurav-nelson/github-action-markdown-link-check@v1
       with:
-        config-file: '.markdown-link-check.json'
-        folder-path: '.devcontainer'
+        config-file: .markdown-link-check.json
+        folder-path: .
