Separate ament linters and clang-tidy

--- a/.github/actions/clang-tidy/action.yml
+++ b/.github/actions/clang-tidy/action.yml
@@ -1,5 +1,5 @@
-name: 'Lint'
-description: 'Lint using devcontainer'
+name: 'Clang-Tidy'
+description: 'Clang-Tidy using devcontainer'
 runs:
   using: 'docker'
   image: '../../../.devcontainer/Dockerfile'
