Update job name and file paths

--- a/.github/actions/ament-lint/action.yml
+++ b/.github/actions/ament-lint/action.yml
@@ -3,4 +3,4 @@ description: 'Ament Lint using devcontainer'
 runs:
   using: 'docker'
   image: '../../../.devcontainer/Dockerfile'
-  entrypoint: ".github/actions/lint/run.sh"
+  entrypoint: ".github/actions/ament-lint/run.sh"
