Migrate whitespace setting to workspace file and update to only show trailing whitespace

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,8 +26,7 @@
 				"icon": "terminal-bash"
 			}
 		},
-		"terminal.integrated.defaultProfile.linux": "bash",
-		"editor.renderWhitespace": "all"
+		"terminal.integrated.defaultProfile.linux": "bash"
 	},
 	"extensions": [
 		// template repo
