--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -39,6 +39,7 @@
 		"smilerobotics.urdf",
 		"streetsidesoftware.code-spell-checker",
 		"twxs.cmake",
+		"ms-python.flake8",
 		// "yzhang.markdown-all-in-one",
 		// "zachflower.uncrustify",
 
