--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,6 +1,10 @@
-name: Regression Tests
+name: Tests
 
 on:
+  push:
+    branches:
+      - main
+  pull_request:
   schedule:
     # Every Friday at 1:00am UTC
     - cron: '0 1 * * 5'
