--- a/.github/workflows/build-dev-image.yaml
+++ b/.github/workflows/build-dev-image.yaml
@@ -31,6 +31,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: "{{defaultContext}}:.devcontainer/dev"
+          file: dev.Dockerfile
           push: true
           tags: ghcr.io/ubcsailbot/sailbot_workspace/dev:${{ inputs.tag }}
           cache-from: type=gha
