--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-          linter: [lint_cmake, xmllint, flake8, pep257]
+          linter: [lint_cmake, xmllint, flake8]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
