Fix build dev image wokflow (#77)
* Comment out build-dev.sh contents

* Update dev dockerfile filename

* Update dev image tag

* Clean up dockerfiles

* Remove libspot and update to latest ompl commit

* Rename ros images

* Update dev image tag

* Remove build-dev.sh, as dev image is built by ci

* Remove ament_pep257

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,26 +1,26 @@
-FROM ghcr.io/ubcsailbot/sailbot_workspace/dev:ros_humble-ompl_d8375d8-amd64
+FROM ghcr.io/ubcsailbot/sailbot_workspace/dev:fix-build-dev-image-ci
 
 # # Uncomment this section to install the apt packages used in the ROS 2 tutorials
 # ENV DEBIAN_FRONTEND=noninteractive
-# RUN apt-get update && \
-#     apt-get install -y \
+# RUN apt-get update \
+#     && apt-get install -y \
 #         # Your package list here
 #         ros-humble-turtlesim \
 #     # Clean up
-#     && apt-get autoremove -y && \
-#     apt-get clean -y && \
-#     rm -rf /var/lib/apt/lists/{apt,dpkg,cache,log} /tmp/* /var/tmp/*
+#     && apt-get autoremove -y \
+#     && apt-get clean -y \
+#     && rm -rf /var/lib/apt/lists/{apt,dpkg,cache,log} /tmp/* /var/tmp/*
 # ENV DEBIAN_FRONTEND=
 
 # # Uncomment this section to install additional apt packages
 # ENV DEBIAN_FRONTEND=noninteractive
-# RUN apt-get update && \
-#     apt-get install -y \
+# RUN apt-get update \
+#     && apt-get install -y \
 #         # Your package list here
 #     # Clean up
-#     && apt-get autoremove -y && \
-#     apt-get clean -y && \
-#     rm -rf /var/lib/apt/lists/{apt,dpkg,cache,log} /tmp/* /var/tmp/*
+#     && apt-get autoremove -y \
+#     && apt-get clean -y \
+#     && rm -rf /var/lib/apt/lists/{apt,dpkg,cache,log} /tmp/* /var/tmp/*
 # ENV DEBIAN_FRONTEND=
 
 # Copy configuration files (e.g., .vimrc) from config/ to the container's home directory
