Update configs for NET (#84)
* Update configs (formatting, static analysis, extension)

* Fix indent

---------

Co-authored-by: Patrick Creighton <pcreighton429@gmail.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -46,6 +46,7 @@
 		// UBCSailbot
 		"awesomektvn.toggle-semicolon",
 		"bierner.markdown-preview-github-styles",
+		"cschlosser.doxdocgen",
 		"DavidAnson.vscode-markdownlint",
 		"eamodio.gitlens",
 		"jeff-hykin.better-cpp-syntax",
