--- a/.github/release.yml
+++ b/.github/release.yml
@@ -10,7 +10,7 @@ changelog:
       labels:
         - bug
 
-    - title: "Docker Changes :whale:"
+    - title: "Dev Container Configuration Changes :whale:"
       labels:
         - devcontainer
 
@@ -18,9 +18,9 @@ changelog:
       labels:
         - vscode
 
-    - title: "Workflow Changes :octocat:"
+    - title: "GitHub Configuration Changes :octocat:"
       labels:
-        - workflows
+        - github
 
     - title: "Other Changes :hammer_and_wrench:"
       labels:
