--- a/.github/workflows/build-base-dev-image.yaml
+++ b/.github/workflows/build-base-dev-image.yaml
@@ -1,4 +1,4 @@
-name: Build Dev Image
+name: Build Base and Dev Images
 
 on:
   workflow_dispatch:
@@ -31,7 +31,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: "{{defaultContext}}:.devcontainer/dev"
-          file: dev.Dockerfile
+          file: base-dev.Dockerfile
           push: true
           tags: ghcr.io/ubcsailbot/sailbot_workspace/dev:${{ inputs.tag }}
           cache-from: type=gha
