--- a/.github/workflows/build-base-dev-image.yaml
+++ b/.github/workflows/build-base-dev-image.yaml
@@ -1,10 +1,10 @@
-name: Build Dev Image
+name: Build Base and Dev Images
 
 on:
   workflow_dispatch:
     inputs:
       tag:
-        description: 'Dev image tag'
+        description: 'Base and dev image tag'
         required: false
         type: string
         default: 'main'
@@ -27,11 +27,22 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.PATRICK_PAT }}
 
-      - name: Build and push
+      - name: Build and push base
         uses: docker/build-push-action@v4
         with:
-          context: "{{defaultContext}}:.devcontainer/dev"
-          file: dev.Dockerfile
+          context: "{{defaultContext}}:.devcontainer/base-dev"
+          file: base-dev.Dockerfile
+          push: true
+          tags: ghcr.io/ubcsailbot/sailbot_workspace/base:${{ inputs.tag }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          target: base
+
+      - name: Build and push dev
+        uses: docker/build-push-action@v4
+        with:
+          context: "{{defaultContext}}:.devcontainer/base-dev"
+          file: base-dev.Dockerfile
           push: true
           tags: ghcr.io/ubcsailbot/sailbot_workspace/dev:${{ inputs.tag }}
           cache-from: type=gha
