--- a/.github/workflows/build-base-dev-image.yaml
+++ b/.github/workflows/build-base-dev-image.yaml
@@ -9,6 +9,10 @@ on:
         type: string
         default: 'main'
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   docker:
     runs-on: ubuntu-latest
