--- a/.github/workflows/build-base-dev-image.yaml
+++ b/.github/workflows/build-base-dev-image.yaml
@@ -39,7 +39,7 @@ jobs:
           context: "{{defaultContext}}:.devcontainer/base-dev"
           file: base-dev.Dockerfile
           push: true
-          tags: ghcr.io/ubcsailbot/sailbot_workspace/base:${{ inputs.tag }}
+          tags: ghcr.io/ubcsailbot/base:${{ inputs.tag }}
           platforms: linux/arm64,linux/amd64
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -51,7 +51,7 @@ jobs:
           context: "{{defaultContext}}:.devcontainer/base-dev"
           file: base-dev.Dockerfile
           push: true
-          tags: ghcr.io/ubcsailbot/sailbot_workspace/dev:${{ inputs.tag }}
+          tags: ghcr.io/ubcsailbot/dev:${{ inputs.tag }}
           platforms: linux/arm64,linux/amd64
           cache-from: type=gha
           cache-to: type=gha,mode=max
