Temporarily build images on PR

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -1,6 +1,7 @@
 name: Build Images
 
 on:
+  pull_request:
   workflow_dispatch:
     inputs:
       tag:
@@ -39,7 +40,7 @@ jobs:
           context: "{{defaultContext}}:.devcontainer/base-dev"
           file: base-dev.Dockerfile
           push: true
-          tags: ghcr.io/ubcsailbot/sailbot_workspace/base:${{ inputs.tag }}
+          tags: ghcr.io/ubcsailbot/sailbot_workspace/base:arm-support-updated
           platforms: linux/arm64,linux/amd64
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -51,7 +52,7 @@ jobs:
           context: "{{defaultContext}}:.devcontainer/base-dev"
           file: base-dev.Dockerfile
           push: true
-          tags: ghcr.io/ubcsailbot/sailbot_workspace/dev:${{ inputs.tag }}
+          tags: ghcr.io/ubcsailbot/sailbot_workspace/dev:arm-support-updated
           platforms: linux/arm64,linux/amd64
           cache-from: type=gha
           cache-to: type=gha,mode=max
