--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -1,4 +1,4 @@
-name: Build Base and Dev Images
+name: Build Images
 
 on:
   workflow_dispatch:
@@ -8,6 +8,10 @@ on:
         required: false
         type: string
         default: 'main'
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   docker:
@@ -19,6 +23,8 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        with:
+          platforms: linux/arm64,linux/amd64
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
@@ -34,6 +40,7 @@ jobs:
           file: base-dev.Dockerfile
           push: true
           tags: ghcr.io/ubcsailbot/sailbot_workspace/base:${{ inputs.tag }}
+          platforms: linux/arm64,linux/amd64
           cache-from: type=gha
           cache-to: type=gha,mode=max
           target: base
@@ -45,5 +52,6 @@ jobs:
           file: base-dev.Dockerfile
           push: true
           tags: ghcr.io/ubcsailbot/sailbot_workspace/dev:${{ inputs.tag }}
+          platforms: linux/arm64,linux/amd64
           cache-from: type=gha
           cache-to: type=gha,mode=max
