--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,7 @@
 	"runArgs": [
 		"--cap-add=SYS_PTRACE",
 		"--security-opt=seccomp:unconfined",
-		"--security-opt=apparmor:unconfined",
+		"--security-opt=apparmor:unconfined"
 	],
 	"containerEnv": {
 		"LIBGL_ALWAYS_SOFTWARE": "1" // Needed for software rendering of opengl
