--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.PATRICK_PAT }}
+          password: ${{ secrets.PAT_TOKEN }}
 
       - name: Build and push base
         uses: docker/build-push-action@v4
