--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -84,4 +84,4 @@ jobs:
     - name: Dispatch Docs Publish workflow
       # https://github.com/orgs/community/discussions/26323#discussioncomment-3251448
       run: |
-        "curl -XPOST -u "${{ secrets.PAT_USERNAME}}:${{secrets.PATRICK_PAT}}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/UBCSailbot/docs/actions/workflows/publish.yml/dispatches --data '{"ref": "main"}'"
+        "curl -XPOST -u "${{ secrets.PAT_USERNAME}}:${{secrets.PAT_TOKEN}}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/UBCSailbot/docs/actions/workflows/publish.yml/dispatches --data '{"ref": "main"}'"
