--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -8,6 +8,9 @@ on:
       repository:
         required: true
         type: string
+      rebuild-docs:
+        required: true 
+        type: string 
         
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -112,3 +115,12 @@ jobs:
       with:
         config-file: .markdown-link-check.json
         folder-path: .
+        
+  rebuild-docs:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && ${{ inputs.rebuild-docs}} == 'true'
+    steps:
+    - name: Dispatch Docs Publish workflow
+      # https://github.com/orgs/community/discussions/26323#discussioncomment-3251448
+      run: |
+        curl -XPOST -u "${{ secrets.PAT_USERNAME}}:${{secrets.PAT_TOKEN}}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/UBCSailbot/docs/actions/workflows/publish.yml/dispatches --data '{"ref": "main"}'
