--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,87 +1,29 @@
 name: Tests
 
+# This uses workflows in a different repo, refer to:
+# https://docs.github.com/en/actions/using-workflows/reusing-workflows#calling-a-reusable-workflow
+
+# This runs sailbot workspace workflows and actions.
+# Runs the Tests Definitions workflow in sailbot_workspace
+   
+# Run condition
 on:
   push:
     branches:
       - main
       - raye
   pull_request:
+  workflow_dispatch:
   schedule:
     # Every Friday at 1:00am UTC
     - cron: '0 1 * * 5'
-  workflow_dispatch:
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-
+  
 jobs:
-  colcon-test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Test
-        uses: ./.github/actions/test/
-
-  ament-lint:
-    name: ament_${{ matrix.linter }}
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-          linter: [lint_cmake, xmllint, flake8, pep257]
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Run linter
-        uses: ./.github/actions/ament-lint/
-        env:
-          LINTER: ${{ matrix.linter }}
-
-  clang-tidy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Run linter
-        uses: ./.github/actions/clang-tidy/
-
-  # https://github.com/nosborn/github-action-markdown-cli
-  markdownlint:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Check out code
-      uses: actions/checkout@v3
-
-    - name: Run linter
-      uses: nosborn/github-action-markdown-cli@v3.2.0
-      with:
-        config_file: .markdownlint.json
-        files: .
-        dot: true
-
-  # https://github.com/gaurav-nelson/github-action-markdown-link-check
-  markdown-link-check:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Check out code
-      uses: actions/checkout@v3
-
-    - name: Run linter
-      uses: gaurav-nelson/github-action-markdown-link-check@v1
-      with:
-        config-file: .markdown-link-check.json
-        folder-path: .
-
-  rebuild-docs:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    steps:
-    - name: Dispatch Docs Publish workflow
-      # https://github.com/orgs/community/discussions/26323#discussioncomment-3251448
-      run: |
-        curl -XPOST -u "${{ secrets.PAT_USERNAME}}:${{secrets.PAT_TOKEN}}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/UBCSailbot/docs/actions/workflows/publish.yml/dispatches --data '{"ref": "main"}'
+# Calls tests in sailbot_workspace 
+# https://github.com/UBCSailbot/sailbot_workspace
+  tests:
+        uses: UBCSailbot/sailbot_workspace/.github/workflows/test_definitions.yml@user/colinli02/11-Publish-ROS-package-actions_FINAL
+        with:
+            repository: ${{ github.event.repository.name }}
+            disable-vcs: false
+            rebuild-docs: true 
